snap: use ./ as source
Instead of making a clean "git clone" from the upstream repo, since the
snapcraft.yaml lives next to the source code of fluent-bit is better to
use this local copy.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -19,8 +19,7 @@ apps:
 
 parts:
   fluent-bit:
-    source: https://github.com/fluent/fluent-bit
-    source-type: git
+    source: ./
     plugin: cmake
     stage-packages:
         - libsasl2-2
